Shorter documentation and fix overflow in preview for long selector during programming by demo

--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -79,7 +79,8 @@
     text-align: left;
     color: whitesmoke;
     max-lines: 1;
-    white-space: nowrap;
+    white-space: nowrap; 
+    overflow: hidden;
     text-overflow: ellipsis;
     display: inline-block;
     padding-left: 12px;
